Add About Me and Education sections

--- a/index.html
+++ b/index.html
@@ -12,54 +12,16 @@
         <p>Phone: +373 69533503</p>
         <p>Location: Chișinău, Moldova</p>
     </header>
-
+    
     <h2>About Me</h2>
     <p>I am a passionate software engineer eager to develop innovative solutions. I thrive in problem-solving environments and love learning new technologies to enhance my skills.</p>
 
     <h2>Education</h2>
     <ul>
         <li><strong>Technical University of Moldova</strong> - Bachelor of Science in Software Engineering (2022 - Present)
-            <br> Favorite Course: Advanced Algorithms - I enjoyed learning about efficient problem-solving techniques.</li>
+            <br> Favorite Course: Algorithms Analysis - I enjoyed learning about efficient problem-solving techniques.</li>
         <li><strong>Theoretical Lyceum "Petru Zadnipru"</strong> - Baccalaureate Diploma (2019 - 2022)
             <br> Favorite Memory: Working on my final-year programming project, which solidified my passion for coding.</li>
     </ul>
-
-    <h2>Projects</h2>
-    <ul>
-        <li><strong><a href="https://github.com/Bostan-Victor/ParkingGuruBack">App for Public Parking Management</a></strong>
-            <br> Technologies: Java, Spring Boot, PostgreSQL</li>
-        <li><strong><a href="https://github.com/Bostan-Victor/KitchenGuru">KitchenGuru - Recipe Finder</a></strong>
-            <br> Technologies: Python, Django, AI Integration</li>
-        <li><strong><a href="https://github.com/Renat03/Flappy-Bird-AI">Flappy Bird AI</a></strong>
-            <br> Technologies: Python, NEAT Algorithm</li>
-    </ul>
-
-    <h2>Skills</h2>
-    <ul>
-        <li>Programming: Python, Java, C/C++</li>
-        <li>Databases: MySQL, PostgreSQL, SQLite</li>
-        <li>Technologies: Django, Spring Boot, Docker, Linux</li>
-    </ul>
-
-    <h2>Languages</h2>
-    <ul>
-        <li>Romanian - Native</li>
-        <li>English - C2</li>
-        <li>Russian - C2</li>
-        <li>Spanish - B2</li>
-    </ul>
-
-    <h2>Hobbies & Interests</h2>
-    <ul>
-        <li>Coding - Solving challenges on Codeforces and Codewars</li>
-        <li>Football - Playing and watching matches</li>
-        <li>Movies - Exploring various genres</li>
-    </ul>
-
-    <footer>
-        <p>GitHub: <a href="https://github.com/Renat03">github.com/Renat03</a></p>
-        <p>Codewars: <a href="https://www.codewars.com/users/Tiler">Codewars Profile</a></p>
-        <p>Codeforces: <a href="https://codeforces.com/profile/Renat69">Codeforces Profile</a></p>
-    </footer>
 </body>
 </html>
