Add Projects section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>Phone: +373 69533503</p>
         <p>Location: Chișinău, Moldova</p>
     </header>
-    
+
     <h2>About Me</h2>
     <p>I am a passionate software engineer eager to develop innovative solutions. I thrive in problem-solving environments and love learning new technologies to enhance my skills.</p>
 
@@ -23,5 +23,16 @@
         <li><strong>Theoretical Lyceum "Petru Zadnipru"</strong> - Baccalaureate Diploma (2019 - 2022)
             <br> Favorite Memory: Working on my final-year programming project, which solidified my passion for coding.</li>
     </ul>
+
+    <h2>Projects</h2>
+    <ul>
+        <li><strong><a href="https://github.com/Bostan-Victor/ParkingGuruBack">App for Public Parking Management</a></strong>
+            <br> Technologies: Java, Spring Boot, PostgreSQL</li>
+        <li><strong><a href="https://github.com/Bostan-Victor/KitchenGuru">KitchenGuru - Recipe Finder</a></strong>
+            <br> Technologies: Python, Django, AI Integration</li>
+        <li><strong><a href="https://github.com/Renat03/Flappy-Bird-AI">Flappy Bird AI</a></strong>
+            <br> Technologies: Python, NEAT Algorithm</li>
+    </ul>
+
 </body>
 </html>
