Add Skills, Languages and Hobbies sections

--- a/index.html
+++ b/index.html
@@ -34,5 +34,27 @@
             <br> Technologies: Python, NEAT Algorithm</li>
     </ul>
 
+    <h2>Skills</h2>
+    <ul>
+        <li>Programming: Python, Java, C/C++</li>
+        <li>Databases: MySQL, PostgreSQL, SQLite</li>
+        <li>Technologies: Django, Spring Boot, Docker, Linux</li>
+    </ul>
+
+    <h2>Languages</h2>
+    <ul>
+        <li>Romanian - Native</li>
+        <li>English - C2</li>
+        <li>Russian - C2</li>
+        <li>Spanish - B2</li>
+    </ul>
+
+    <h2>Hobbies & Interests</h2>
+    <ul>
+        <li>Coding - Solving challenges on Codeforces and Codewars</li>
+        <li>Football - Playing and watching matches</li>
+        <li>Movies - Exploring various genres</li>
+    </ul>
+
 </body>
 </html>
