Add footer with online profiles

--- a/index.html
+++ b/index.html
@@ -56,5 +56,11 @@
         <li>Movies - Exploring various genres</li>
     </ul>
 
+    <footer>
+        <p>GitHub: <a href="https://github.com/Renat03">github.com/Renat03</a></p>
+        <p>Codewars: <a href="https://www.codewars.com/users/Tiler">Codewars Profile</a></p>
+        <p>Codeforces: <a href="https://codeforces.com/profile/Renat69">Codeforces Profile</a></p>
+    </footer>
+
 </body>
 </html>
